--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "react": "^16.10.2",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
@@ -28,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0"
   }
 }
